@startuml
'https://plantuml.com/sequence-diagram

hide circle
skinparam classAttributeIconSize 0

class ReviewController {
    +approveRejectReview(String sku, Boolean reviewStatus):
}


class ReviewService {
+ ReviewService(ReviewRepository RevRepo)
+ approveRejectReview(String sku, Boolean reviewStatus):
}

interface ReviewRepository <<interface>> {
+ getReviewById(Long ReviewId):
}


class Review{
    -ReviewId
    -Text
    -Rating
    -Date
    -Status
    -upVote
    -downVote
   Review(reviewId,text,rating,date,status,upVote,downVote)
}


ReviewRepository "1" -right-> "0..*" Review:  records
ReviewController ..> ReviewService
ReviewService ..> ReviewRepository
@enduml
